<resources>
    <string name="app_name">My app</string>
    <string name="first_text">This is my application</string>
    <string name="second_text">This is my subtitle</string>
    <string name="third_text">My Name is:</string>
    <string name="edit_text1">Enter name:</string>
    <string name="signup">Sign Up</string>
    <string name="first_name">Enter First Name</string>
    <string name="second_name">Enter Last Name</string>
    <string name="email">Enter Email</string>
    <string name="password">Password</string>
    <string name="c_pass">Confirm Password</string>
    <string name="sign">Sign Up</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="english">English</string>
    <string name="std_mgmt">Student Management</string>
    <string name="hlo">Hello</string>
    <string name="nepali">Nepali</string>


    <string-array name="country">
        <item>--Select Country--</item>
        <item>Nepal</item>
        <item>India</item>
        <item>China</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>