<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/indigo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="70sp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="60dp"
        android:textColor="@color/cardview_light_background"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:hint="@string/first_name"
        android:textSize="20sp"
        android:paddingLeft="15dp"
        android:height="40dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:hint="@string/second_name"
        android:textSize="20sp"
        android:paddingLeft="15dp"
        android:height="40dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:hint="@string/email"
        android:textSize="20sp"
        android:paddingLeft="15dp"
        android:height="40dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:textSize="20sp"
        android:paddingLeft="15dp"
        android:height="40dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:hint="@string/c_pass"
        android:textSize="20sp"
        android:paddingLeft="15dp"
        android:height="40dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign"/>

</LinearLayout>